ingress/app1/manifest.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: app-1
#   # labels related to deployment resource
#   labels:
#     app: app-1
# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: app-1
#   # Pod
#   template:
#     metadata:
#       labels:
#         app: app-1
#     spec:
#       containers:
#       - name: app-1
#         image: joindevops/app1
#         ports:
#         - containerPort: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: app-1
#   # servicer labels
#   labels:
#     app: app-1
# spec:
#   # Service uses the below labels to select the pods
#   selector:
#     app: app-1
#   ports:
#     - protocol: TCP
#       port: 80 # service port
#       targetPort: 80 # container port
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: app-1
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
#     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:160885265516:certificate/72f4e658-7fb6-4d67-ada0-3c9da6a6831e
#     alb.ingress.kubernetes.io/target-type: ip
#     alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
#     alb.ingress.kubernetes.io/group.name: roboshop
# spec:
#   ingressClassName: alb
#   rules:
#   - host: "app1.dev90s.shop"
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: app-1
#             port:
#               number: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1
  # labels related to deployment resource
  labels:
    app: app-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  # Pod
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
      - name: app-1
        image: imranjoindevops/app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-1
  # servicer labels
  labels:
    app: app-1
spec:
  # Service uses the below labels to select the pods
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-1
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:970361933543:certificate/08e43e6c-3baa-469f-ba9e-147869fbe40b
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/group.name: roboshop
spec:
  ingressClassName: alb
  rules:
  - host: "app1.devops90s.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-1
            port:
              number: 80
